--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "lldb.library": "/usr/lib/liblldb.so"
+    "lldb.library": "/usr/lib/liblldb.so",
+    "sourcekit-lsp.serverPath": "/usr/bin/sourcekit-lsp",
+    "sourcekit-lsp.trace.server": "off",
 }
